--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         java-version: '>11.0.3'
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+      run: ant -noinput -buildfile build.xml build
