--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -19,6 +19,6 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: '>11.0.3'
+        java-version: '~11.0.0'
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml build
